--- a/index.html
+++ b/index.html
@@ -63,4 +63,24 @@
     </ul>
   </section>
 
+  <section>
+    <h2>Comidas</h2>
+    <ul>
+      <li>
+        <div class="details">
+          <h3>Feijoada</h3>
+          <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <strong class="price">R$34.00</strong>
+      </li>
+      <li>
+        <div class="details">
+          <h3>Porção de Arroz</h3>
+          <p class="description">Lorem ipsum, dolor sit amet consectetur adipisicing elit.</p>
+        </div>
+        <strong class="price">R$8.20</strong>
+      </li>
+    </ul>
+  </section>
+
 </html>
